--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,14 @@ spring.datasource.password = root
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#Email:
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.username = lambda.bilan@gmail.com
+spring.mail.password = lambda.bilan.calendar
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.transport.protocol = smtp
+#Velocity (used in generating html templates for emails)
+spring.velocity.properties.resource.loader = class
+spring.velocity.properties.class.resource.loader.class = org.apache.velocity.runtime.resource.loader.ClasspathResourceLoader 
