--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -17,6 +17,7 @@ feedback.add.success = Feedback est bien enregistré.
 intervention.add.fail = Erreur lors l'affectation.
 intervention.add.success = Projets bien affecter.
 intervention.id.notfound = intervention non trouvée.
+intervention.update.success = Mise à jour reussite.
 #-----------------------------------------------------------------------------------
 
 #Objectif
