--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -11,6 +11,7 @@ bao.date.notfound = Erreur date non trouvé.
 feedback.list.empty = Erreur lors de la chargement des feedbacks.
 feedback.add.fail =  Erreur lors de l'ajout du feedback.
 feedback.add.success = Feedback est bien enregistré.
+feedback.valide.success = FeedBack Valider.
 #--------------------------------------------------------------------------------
 
 #Intervention
@@ -71,4 +72,5 @@ utilisateur.email.success = Message est bien envoyé.
 utilisateur.email.fail = Message n'est pas envoyé.
 utilisateur.update.password.fail = Erreur lors la mise à jour de mot de passe.
 utilisateur.update.password.success = le mot de passe est bien modifier.
+utilisateur.update.calander.success = le calendrier est bien defini. (il faut assurer que votre calendrier est publique au systeme)
 #------------------------------------------------------------------------------
